# prividium-zk-selective-disclosure

./: .gitignore  Cargo.toml  DESIGN.md  PLAN.md  README.md
core/: Cargo.toml  README.md
core/src/: account_properties.rs  block_header.rs  hash.rs  lib.rs  params.rs  pub_input.rs  rlp.rs  state_commitment.rs  statement_id.rs  stored_batch_info.rs  tx_rolling_hash.rs  witness.rs
core/src/statements/: balance_of.rs  common.rs  mod.rs  observable_bytecode_hash.rs  tx_inclusion.rs
core/src/tree/: key.rs  merkle.rs  mod.rs
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml
host/src/: bundle.rs  disclosure_request.rs  l1_source.rs  lib.rs  main.rs  prover.rs  rpc_l1.rs  rpc_l2.rs  rpc_wire.rs  verifier.rs  witness_source.rs
host/tests/: end_to_end.rs  statements.rs  witness_source.rs
local-setup/: README.md  run_local.sh
test-fixtures/: Cargo.toml
test-fixtures/src/: lib.rs  mock_block.rs  mock_tree.rs  scenarios.rs
test-fixtures/tests/: scenarios.rs
