[package]
name = "prividium-sd-test-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Native helpers for building selective-disclosure witnesses in tests, wrapping the ZKsync OS TestingTree."

[dependencies]
prividium-sd-core = { path = "../core" }

# Reference implementations from the ZKsync OS tree. Used only on the host
# side, never in the guest. We reach out of the repo to the sibling
# `../../zksync-os` checkout.
basic_bootloader = { path = "../../zksync-os/basic_bootloader", default-features = false, features = ["testing"] }
basic_system = { path = "../../zksync-os/basic_system", default-features = false, features = ["testing"] }
zk_ee = { path = "../../zksync-os/zk_ee", default-features = false, features = ["testing"] }
crypto = { path = "../../zksync-os/crypto", default-features = false, features = ["testing"] }
ruint = { version = "1.16", default-features = false }
arrayvec = { version = "0.7", default-features = false }

[dev-dependencies]
